--- a/index.html
+++ b/index.html
@@ -4,11 +4,135 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="asset/css/stlye.css" rel="stylesheet">
-    <title>JUK travel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">   
+    <script src="https://kit.fontawesome.com/5c652914c5.js" crossorigin="anonymous"></script> <!-- fontawesome.com-->
+    <link href="asset/css/style.css" rel="stylesheet">
+    <title>JUK travel : vos voyages en ligne</title>
 </head>
 <body>
-   
+    <header>
+        <nav>
+            <div class="my-navbar">
+                <div class="logo">
+                    <a href="#">JUK<span class="point">.</span></a>
+                </div>
+                    <ul class="my-links">
+                        <li><a href="good-deals">Bons plans</a></li>
+                        <li><a href="destinations">Destinations</a></li>
+                        <li><a href="gift-box">Box cadeaux</a></li>
+                    </ul>
+                <div class="button-connection">
+                    <a href="connexion">Connexion</a>
+                </div>
+                <div class="burger-menu-button">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </div>
+        </nav>
+        <div class="my-burger-menu">
+            <ul class="my-links">
+                <li><a href="good-deals">Bons plans</a></li>
+                <li><a href="destinations">Destinations</a></li>
+                <li><a href="gift-box">Box cadeaux</a></li>
+            </ul> 
+            <div class="my-divider"></div>
+            <div class="button-connection">
+                <a href="connexion">Connexion</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="baseline">
+            <h1>Vos plus beaux voyages commencent ici<span class="point">.</span></h1>
+        </section>
+    </main>
+       <!--  <section class="discount">
+            <h2>Nos offres spéciales</h2>
+            <div id="carouselWithIndicators" class="carousel slide" data-bs-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="0" class="active"></li>
+                    <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="1"></li>
+                    <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="card">
+                        <div class="carousel-item active">
+                            <img src="https://picsum.photos/300/200" class="card-img-top" alt="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://picsum.photos/1200/400" class="card-img-top" alt="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://picsum.photos/300/200" class="card-img-top" alt="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselWithIndicators" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselWithIndicators" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </a>
+            </div>
+        </section>
+        <section class="destinations">
+            <h2>Nos destinations</h2>
+            <div class="card-destinations"></div>
+            <div class="card-destinations"></div>
+            <div class="card-destinations"></div>
+            <div class="card-destinations"></div>
+            <div class="card-destinations"></div>
+            <div class="card-destinations"></div>
+            <div class="card-destinations"></div>
+            <div class="card-destinations"></div>
+        </section>
+        <section class="bestsellers">
+            <h2>Nos bestsellers</h2>
+            <div class="sun">
+                <img src="" alt="">
+            </div>
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga consectetur, aliquam minus vel officiis itaque.</p>
+        </section>
+        <section class="contact">
+            <h3>Suivez-nous</h3>
+            <div class="logo-social-network">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="copyright">
+            <p>&copy;JUK travel - 2024</p>
+        </div>
+        <div class="rules">
+            <p>Politique de confidentialité</p>
+            <p>Mentions Légales</p>
+            <p>Condition générale de vente</p>
+        </div>
+    </footer> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
